# sre-ai-agent

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
context/: CONTEXT.md
context/company/: incident-severity.md  oncall-schedule.md  tech-stack.md
context/personas/: junior-sre.md  senior-sre.md  sre-manager.md
scripts/: incident_init.py  knowledge_search.py  validate_skills.py
skills/capacity-planning/: SKILL.md
skills/chaos-engineering/: SKILL.md
skills/cost-optimization/: SKILL.md
skills/deployment-safety/: SKILL.md
skills/iac-review/: SKILL.md
skills/import-rca/: SKILL.md
skills/incident-response/: SKILL.md
skills/incident-response/references/: communication-templates.md  severity-matrix.md
skills/knowledge-base/: INDEX.md
skills/knowledge-base/patterns/: auth-service-redis-timeout.md  order-service-memory-leak-after-deploy.md  (+1 more)
skills/knowledge-capture/: SKILL.md
skills/observability/: SKILL.md
skills/oncall-handoff/: SKILL.md
skills/oncall-runbook/: SKILL.md
skills/postmortem/: SKILL.md
skills/production-readiness-review/: SKILL.md
skills/rca-summary/: SKILL.md
skills/rfc/: SKILL.md
skills/root-cause-analysis/: SKILL.md
skills/runbook-generator/: SKILL.md
skills/security-posture/: SKILL.md
skills/slo-monitoring/: SKILL.md
skills/toil-tracking/: SKILL.md
sre_agent/: cli.py
sre_agent/commands/: import_rca.py  incident.py  init.py  search.py  validate.py
sre_agent/core/: incident.py  rca_parser.py  search.py  validate.py
(+3 files in other folders)
