[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sre-agent"
version = "0.1.0"
description = "Your company's institutional memory for SRE — accumulates knowledge from every incident"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["sre", "devops", "incident-response", "knowledge-base", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[project.scripts]
sre-agent = "sre_agent.cli:cli"

[project.urls]
Homepage = "https://github.com/stevancris/sre-ai-agent"
Repository = "https://github.com/stevancris/sre-ai-agent"
Issues = "https://github.com/stevancris/sre-ai-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["sre_agent"]
